--- a/site/web/app/themes/harper/resources/assets/styles/_app.scss
+++ b/site/web/app/themes/harper/resources/assets/styles/_app.scss
@@ -8,6 +8,7 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: bottom;
+  border: 10px solid black;
 }
 
 .bg__no {
