--- a/site/web/app/themes/harper/resources/assets/styles/_amendments.scss
+++ b/site/web/app/themes/harper/resources/assets/styles/_amendments.scss
@@ -1,3 +1,24 @@
+header.header {
+  background: black;
+  padding: 0;
+  margin: 0;
+  border-bottom: 2px solid white;
+  padding-left: 0.5rem;
+
+  svg {
+    position: relative;
+    bottom: -15px;
+  }
+
+  .header-brand .column h1 {
+    @extend .f-headline;
+    @extend .f-6;
+    @extend .white;
+    @extend .measure;
+    @extend .tc;
+  }
+}
+
 #section-dream-killers {
   .columns {
     @extend .mv6;
@@ -11,19 +32,10 @@
 
   .title-wrapper {
     h2 {
-      writing-mode: vertical-lr;
-      transform: rotate(180deg);
       color: white;
-      background: $dark-red;
+      background: $black;
 
-      @extend .fr;
-      @extend .pv2;
-
-      @media screen and (max-width: $tablet) {
-        writing-mode: lr;
-        transform: rotate(0deg);
-        margin-top: $spacing-extra-large;
-      }
+      @extend .pa4;
     }
   }
 }
@@ -34,9 +46,11 @@
   .display {
     color: $white;
   }
-}
 
-.section.section.intro .columns p,
-.section.section.prep .columns p {
-  padding-top: $spacing-extra-large;
+  ul {
+    @extend .ml4;
+    @extend .mt4;
+    @extend .dib;
+    @extend .pt3;
+  }
 }
