--- a/site/web/app/themes/harper/resources/assets/styles/_type.scss
+++ b/site/web/app/themes/harper/resources/assets/styles/_type.scss
@@ -1,22 +1,6 @@
-h1.display {
+.display {
   font-family: $family-display;
   text-transform: uppercase;
-  font-size: 12rem;
-  line-height: 10rem;
-
-  @media screen and (max-width: 500px) {
-    font-size: 5rem !important;
-    line-height: 4rem !important;
-  }
-}
-
-.header {
-  h1.display {
-    @media screen and (max-width: 1100px) {
-      font-size: 5rem;
-      line-height: 4rem;
-    }
-  }
 }
 
 .subtitle {
@@ -24,8 +8,6 @@ h1.display {
   color: $white;
   display: inline-block;
   margin-bottom: $spacing-large;
-
-  @extend .ph2;
 }
 
 .peace {
@@ -50,6 +32,11 @@ p {
     padding-right: $spacing-large;
     padding-bottom: $spacing-large;
   }
+}
+
+.display.is-1 {
+  font-size: 8rem;
+  line-height: 6rem;
 }
 
 p strong {
