stylesheet lint fix

--- a/site/web/app/themes/harper/resources/assets/styles/_amendments.scss
+++ b/site/web/app/themes/harper/resources/assets/styles/_amendments.scss
@@ -22,7 +22,7 @@ header.header {
 #section-candidates {
   @media screen and (max-width: 30em) {
     table {
-      max-width: 95% !important
+      max-width: 95% !important;
     }
   }
 }
