--- a/site/web/app/themes/harper/resources/assets/styles/_app.scss
+++ b/site/web/app/themes/harper/resources/assets/styles/_app.scss
@@ -1,3 +1,10 @@
+html,
+body {
+  max-width: 100%;
+  overflow: hidden;
+  overflow-x: hidden;
+}
+
 body {
   background-attachment: fixed;
   background-repeat: repeat;
